--- a/AdvanceSelGitHubNinzaCRM/test-output/emailable-report.html
+++ b/AdvanceSelGitHubNinzaCRM/test-output/emailable-report.html
@@ -8,18 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">97,236</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,493</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">ExtentReportGen.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1743607826136</td><td rowspan="1">3131</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">ExtentReportGen.CreateCampaignTest</td><td><a href="#m1">createCampaignTest</a></td><td rowspan="1">1743607763501</td><td rowspan="1">13651</td></tr><tr class="passedeven"><td><a href="#m2">createCampaignwithcloseDateTest</a></td><td rowspan="1">1743607779087</td><td rowspan="1">12649</td></tr><tr class="passedodd"><td rowspan="1">ExtentReportGen.CreateContactwithCampaign</td><td><a href="#m3">createContactwithCampaignTest</a></td><td rowspan="1">1743607797106</td><td rowspan="1">24332</td></tr><tr class="passedeven"><td rowspan="1">ExtentReportGen.CreateProduct</td><td><a href="#m4">createProductTest</a></td><td rowspan="1">1743607835698</td><td rowspan="1">19420</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">CampaignTest.CreateCampaignTest</td><td><a href="#m0">createCampaignTest</a></td><td rowspan="1">1743780232440</td><td rowspan="1">13513</td></tr><tr class="passedeven"><td><a href="#m1">createCampaignwithcloseDateTest</a></td><td rowspan="1">1743780247500</td><td rowspan="1">12852</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">ExtentReportGen.LoginTest#loginTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation Failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at ExtentReportGen.LoginTest.loginTest(LoginTest.java:52)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ExtentReportGen.CreateCampaignTest#createCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Camapign Vivaan_2960 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ExtentReportGen.CreateCampaignTest#createCampaignwithcloseDateTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Camapign Vivaan_2582 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">ExtentReportGen.CreateContactwithCampaign#createContactwithCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Camapign Sunil_1489 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">ExtentReportGen.CreateProduct#createProductTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Camapign Pen_1998 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">CampaignTest.CreateCampaignTest#createCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Camapign Vivaan_1543 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">CampaignTest.CreateCampaignTest#createCampaignwithcloseDateTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Camapign Vivaan_449 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
